# MiniCompetition-AgenticAI

./: .gitignore  Dockerfile  Modelfile-Phi4  README.md  api.py  evaluate.py  main.py  pyproject.toml
Data/: test.csv  train.csv
Docs/: map.py
src/: DropCols.py  agent_template.py  agentic-model-creation.py  logic.py  nodes.py  pipeline.py  prompts.py  schemas.py  state.py  workflow.py  zipcode_dollars.py
src/agentic/: evaluate.py  prompts.py
src/deterministic/: evaluate.py
src/shared/: DropCols.py  logic.py  schemas.py  zipcode_dollars.py
