[project]
name = "dsr-minicompetition-agenticai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.3.4",
    "langchain-experimental>=0.4.2",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.2.4",
    "pandas>=3.0.3",
]
