[project]
name = "dsr-minicompetition-agenticai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "geopy>=2.4.1",
    "langchain>=1.3.4",
    "langchain-experimental>=0.4.2",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.2.4",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "python-levenshtein>=0.27.3",
    "scikit-learn>=1.9.0",
    "tabulate>=0.10.0",
    "tqdm>=4.68.1",
    "typing>=3.10.0.0",
]
